--- a/src/app/features/feature-portfolio/components/hero-section/hero-section.component.html
+++ b/src/app/features/feature-portfolio/components/hero-section/hero-section.component.html
@@ -7,18 +7,19 @@
    
    <div class="title">
      <h1>A Software Engineer
-       <span>
+       <!-- <span>
          <button class="title-play-button">
            <img src="assets/play.png" height="20px" width="15px">
          </button>
-       </span>
+       </span> -->
      </h1> 
    </div>
    
    <div class="subtitle">
     <p>
-     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-     when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+      With a passion for creating innovative solutions. 
+      Analyzes user needs, designs, develops, and tests software using strong programming skills. 
+      Thrives in a collaborative environment and brings a problem-solving mindset to every project.
     </p>
    </div>
    
