--- a/src/app/features/feature-portfolio/components/resume/resume-about-me-section/resume-about-me-section.component.html
+++ b/src/app/features/feature-portfolio/components/resume/resume-about-me-section/resume-about-me-section.component.html
@@ -7,16 +7,27 @@
          <div class="details">
             <h1>HI, I AM VASILE BADRAGAN A SOFTWARE ENGINEER</h1>
             <p>
-              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-              when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+              Skilled in analyzing user needs and designing, developing, and testing software applications. 
+              Adept at various programming languages and works effectively within a team to deliver high-quality, efficient software. 
+              Eager to learn and stay up-to-date with the latest advancements in the field.
             </p>
             <div class="contact">
-              <p>Name <span>:Vasile Badragan</span></p>
-              <p>Nationality <span>:Moldavien</span></p>
-              <p>Experience <span>:5+ Years</span></p>
-              <p>Phone <span>:+37376775951</span></p>
-              <p>Languages <span>:English, Russian, Italian</span></p>
-              <p>Email <span>:vb@mail.ru</span></p>
+              <div class="first-column">
+                <p>Name</p>
+                <p>Nationality</p>
+                <p>Experience</p>
+                <p>Phone</p>
+                <p>Languages</p>
+                <p>Email</p>
+              </div>
+              <div class="second-column">
+                <p>:Vasile Badragan</p>
+                <p>:Moldavien</p>
+                <p>:5+ Years</p>
+                <p>:+373 76 775 951</p>
+                <p>:English, Russian, Italian</p>
+                <p>:vb.development@dev.com</p>
+              </div>
             </div>
   
             <div class="work-progress-button">
