--- a/src/app/features/feature-portfolio/components/resume/resume-education-section/resume-education-section.component.html
+++ b/src/app/features/feature-portfolio/components/resume/resume-education-section/resume-education-section.component.html
@@ -2,29 +2,29 @@
   <div class="timeline">
     <div class="timeline-item-container">
       <div class="timeline-item">
-        <h4>Junior UI/UX Designer</h4>
-        <p>2022 - 2023</p>
-        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+        <h4>{{ educations[0].title }}</h4>
+        <p>{{ educations[0].period }}</p>
+        <p>{{ educations[0].description }}</p>
      </div>
      <div class="timeline-item">
-       <h4>Junior UI/UX Designer</h4>
-       <p>2022 - 2023</p>
-       <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+       <h4>{{ educations[1].title }}</h4>
+       <p>{{ educations[1].period }}</p>
+       <p>{{ educations[1].description }}</p>
     </div>
     </div>
 
-   <hr style="border: 1px dashed white;">
+   <hr>
 
   <div class="timeline-item-container">
     <div class="timeline-item">
-      <h4>Junior UI/UX Designer</h4>
-      <p>2022 - 2023</p>
-      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+      <h4>{{ educations[2].title }}</h4>
+      <p>{{ educations[2].period }}</p>
+      <p>{{ educations[2].description }}</p>
      </div>
      <div class="timeline-item">
-      <h4>Junior UI/UX Designer</h4>
-      <p>2022 - 2023</p>
-      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+      <h4>{{ educations[3].title }}</h4>
+      <p>{{ educations[3].period }}</p>
+      <p>{{ educations[3].description }}</p>
      </div>
   </div>
 </div>
