--- a/src/app/features/feature-portfolio/components/resume/resume-skills-section/resume-skills-section.component.scss
+++ b/src/app/features/feature-portfolio/components/resume/resume-skills-section/resume-skills-section.component.scss
@@ -1,10 +1,8 @@
 .skill-level {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 100px;
-
-  .skill-level-column {
-  }
+  row-gap: 20px;
+  column-gap: 100px;
 
   .skill-level-item {
     margin-bottom: 50px;
@@ -31,6 +29,43 @@
 
       .persantage {
         width: 95%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .skill-level {
+    display: inline-block;
+    width: 100%;
+
+    .skill-level-item {
+      margin-bottom: 50px;
+      margin-top: 20px;
+     
+      .skill-title {
+        display: flex;
+        justify-content: space-between;
+  
+        p {
+          font-size: 24px;
+          font-weight: 400;
+          color: var(--cream-500);
+          margin-bottom: 20px;
+        }
+      }
+  
+      .progress-bar {
+        background-color: var(--white);
+  
+        .progress {
+          background-color: var(--cream-500);
+          height: 5px;
+        }
+  
+        .persantage {
+          width: 95%;
+        }
       }
     }
   }
