--- a/src/app/features/feature-portfolio/components/statistic/statistic.component.html
+++ b/src/app/features/feature-portfolio/components/statistic/statistic.component.html
@@ -1,4 +1,4 @@
-<div class="hero-social-media">
+<!-- <div class="hero-social-media">
   <p>FOLLOW ME ------</p>
   <div class="social-media-icon">
     <mat-icon svgIcon="linkedin"></mat-icon>
@@ -6,7 +6,7 @@
     <mat-icon svgIcon="pinterest"></mat-icon>
     <mat-icon svgIcon="tiktok"></mat-icon>
   </div>
-</div>
+</div> -->
 
 <div class="hero-statistic">
   <div class="hero-statistic-item">
