--- a/src/app/features/feature-portfolio/pages/service-page/service-page.component.html
+++ b/src/app/features/feature-portfolio/pages/service-page/service-page.component.html
@@ -170,7 +170,7 @@
            </div>
            <div class="work-process-item">
             <mat-icon svgIcon="radio-button-icon"></mat-icon>
-            <p>TypeScript/p>
+            <p>TypeScript</p>
            </div>
         </div>
       </div>
