--- a/src/app/features/feature-portfolio/components/about/skills-section/skills-section.component.html
+++ b/src/app/features/feature-portfolio/components/about/skills-section/skills-section.component.html
@@ -6,7 +6,7 @@
   <div class="skill-level-item" *ngFor="let skill of skills">
     <div class="skill-title">
      <p>{{ skill.title }}</p>
-     <p skill-level="50">{{ skill.level }}</p>
+     <p>{{ skill.level }}</p>
     </div>
 
     <div class="progress-bar">
