--- a/src/app/features/feature-portfolio/components/resume-section/resume-section.component.scss
+++ b/src/app/features/feature-portfolio/components/resume-section/resume-section.component.scss
@@ -57,7 +57,24 @@
 
         .resume-navbar-mobile{
             display: none;
-        }
+            justify-content: space-between;
+            margin-top: 40px;
+            padding: 0px 20px;
+            
+            p{
+              color: var(--cream-500);
+            }
+        
+            button{
+              background-color: transparent;
+              border: none;
+        
+              mat-icon{
+                margin-right: -15px;
+                height: 20px;
+              }
+            }
+          }
 
     }
 }
@@ -74,15 +91,13 @@
             h3{
                 font-size: 24px;
                 font-weight: 400;
-                color: var(--cream-500);
                 margin-top: 40px;
             }
     
             h1{
                 margin-top: 40px;
                 font-size: 48px;
-                //font-size: 64px;
-                color: var(--white);
+                margin-bottom: 40px;
             }
     
             .resume-navbar{
@@ -117,9 +132,8 @@
 
             .resume-navbar-mobile{
                 display: flex;
-                justify-content: space-between;
-                margin-top: 30px;
-
+                margin-bottom: 40px;
+      
                 p{
                     color: var(--cream-500);
                     font-size: 18px;
