--- a/src/app/features/feature-portfolio/components/resume/resume-about-me-section/resume-about-me-section.component.scss
+++ b/src/app/features/feature-portfolio/components/resume/resume-about-me-section/resume-about-me-section.component.scss
@@ -31,7 +31,7 @@
                     padding-top: 20px;
                     font-weight: 200;
                     line-height: 25px;
-                    color: white;
+                    color: var(--white);
                 }
 
                 span{
@@ -40,9 +40,11 @@
 
                 .contact{
                     padding-top: 20px;
-                    color: white;
+                    color: var(--white);
                     text-align: left;
                     padding-left: 5px;
+                    display: inline-flex;
+                    gap: 40px;
                 }
 
                 .work-progress-button{
@@ -98,7 +100,7 @@
 
     
                     .work-progress-button{
-                        margin-top: 70px;
+                        margin-top: 40px;
                         align-content: center; 
                        
                         button{
