--- a/src/app/features/feature-portfolio/pages/contact-page/contact-page.component.scss
+++ b/src/app/features/feature-portfolio/pages/contact-page/contact-page.component.scss
@@ -16,213 +16,214 @@
     margin-bottom: 60px;
   }
 
-  .contact-fields{
+  .contact-fields {
     display: flex;
     justify-content: space-between;
 
-    .contact-details{
-        display: grid;
-        row-gap: 30px;
-        width: 40%;
+    .contact-details {
+      display: grid;
+      row-gap: 30px;
+      width: 40%;
 
-       .contact-item{
+      .contact-item {
         display: flex;
-         background-color: var(--dark-grey-500);
-         height: 130px;
-         padding: 40px;
+        background-color: var(--dark-grey-500);
+        height: 130px;
+        padding: 40px;
 
-         mat-icon{
-            width: 50px;
-            height: 50px;
-            margin-right: 30px;
-         }
+        mat-icon {
+          width: 50px;
+          height: 50px;
+          margin-right: 30px;
+        }
 
-         .inner-contact-item{
-            text-align: left;
-          p{
+        .inner-contact-item {
+          text-align: left;
+          p {
             font-size: 24px;
             color: var(--white);
             margin-bottom: 10px;
           }
 
-          p + p{
+          p + p {
             font-size: 16px;
             font-weight: 100;
           }
-         }
-       }
-
-    }
-
-    .contact-form{
-        width: 50%;
-        .send-message{
-            display: grid;
-            row-gap: 30px;
-    
-            .name-email-input{
-                display: flex;
-                justify-content: space-between;
-    
-                input{
-                    background-color: var(--dark-grey-500);
-                    border: none;
-                    height: 58px;
-                    width: 45%;
-                    padding: 20px 30px;
-                    color: var(--white);
-                    font-size: 16px;
-                }
-            }
-
-            input{
-                background-color: var(--dark-grey-500);
-                border: none;
-                height: 58px;
-                padding: 20px 30px;
-                color: var(--white);
-                font-size: 16px;
-            }
-
-            textarea{
-                background-color: var(--dark-grey-500);
-                border: none;
-                height: 145px;
-                padding: 20px 30px;
-                color: var(--white);
-                font-size: 16px;
-            }
-
-            button{
-                width: 230px;
-                height: 51px;
-                border-radius: 25px;
-                outline: 1px solid var(--cream-500);
-                outline-offset: 2px;
-                background-image:  linear-gradient(to right, var(--cream-500), var(--cream-100));
-                color: var(--cream-700);
-                font-size: 18px;
-            }
-    
         }
+      }
     }
 
+    .contact-form {
+      width: 50%;
+      .send-message {
+        display: grid;
+        row-gap: 30px;
+
+        .name-email-input {
+          display: flex;
+          justify-content: space-between;
+
+          input {
+            background-color: var(--dark-grey-500);
+            border: none;
+            height: 58px;
+            width: 45%;
+            padding: 20px 30px;
+            color: var(--white);
+            font-size: 16px;
+          }
+        }
+
+        input {
+          background-color: var(--dark-grey-500);
+          border: none;
+          height: 58px;
+          padding: 20px 30px;
+          color: var(--white);
+          font-size: 16px;
+        }
+
+        textarea {
+          background-color: var(--dark-grey-500);
+          border: none;
+          height: 145px;
+          padding: 20px 30px;
+          color: var(--white);
+          font-size: 16px;
+        }
+
+        button {
+          width: 230px;
+          height: 51px;
+          border-radius: 25px;
+          outline: 1px solid var(--cream-500);
+          outline-offset: 2px;
+          background-image: linear-gradient(
+            to right,
+            var(--cream-500),
+            var(--cream-100)
+          );
+          color: var(--cream-700);
+          font-size: 18px;
+        }
+      }
+    }
   }
 }
-
 
 @media screen and (max-width: 767px) {
   .contact {
     padding: 50px 20px;
-  
+
     h3 {
       font-size: 24px;
       margin-bottom: 40px;
     }
-  
+
     h1 {
       font-size: 48px;
       margin-bottom: 60px;
     }
-  
-    .contact-fields{
+
+    .contact-fields {
       display: block;
       justify-content: space-between;
-  
-      .contact-details{
-          display: grid;
-          row-gap: 20px;
-          width: 100%;
-  
-         .contact-item{
+
+      .contact-details {
+        display: grid;
+        row-gap: 20px;
+        width: 100%;
+
+        .contact-item {
           display: flex;
-           height: 100px;
-           padding: 20px;
-  
-           mat-icon{
-              width: 50px;
-              height: 50px;
-              margin-right: 30px;
-           }
-  
-           .inner-contact-item{
-              text-align: left;
-            p{
+          height: 100px;
+          padding: 20px;
+
+          mat-icon {
+            width: 50px;
+            height: 50px;
+            margin-right: 30px;
+          }
+
+          .inner-contact-item {
+            text-align: left;
+            p {
               font-size: 24px;
               color: var(--white);
               margin-bottom: 10px;
             }
-  
-            p + p{
+
+            p + p {
               font-size: 16px;
               font-weight: 100;
             }
-           }
-         }
-  
-      }
-  
-      .contact-form{
-          width: 100%;
-          margin-top: 20px;
-
-          .send-message{
-              display: block;
-             
-              align-self: center;
-      
-              .name-email-input{
-                  display: flex;
-                  justify-content: space-between;
-      
-                  input{
-                      background-color: var(--dark-grey-500);
-                      border: none;
-                      height: 58px;
-                      width: 45%;
-                      padding: 20px 30px;
-                      color: var(--white);
-                      font-size: 16px;
-                  }
-              }
-  
-              input{
-                  background-color: var(--dark-grey-500);
-                  border: none;
-                  height: 58px;
-                  width: 100%;
-                  padding: 20px 30px;
-                  color: var(--white);
-                  font-size: 16px;
-                  margin-top: 20px;
-              }
-  
-              textarea{
-                  background-color: var(--dark-grey-500);
-                  border: none;
-                  height: 145px;
-                  width: 100%;
-                  padding: 20px 30px;
-                  color: var(--white);
-                  font-size: 16px;
-                  margin-top: 20px;
-              }
-  
-              button{
-                  width: 230px;
-                  height: 51px;
-                  border-radius: 25px;
-                  outline: 1px solid var(--cream-500);
-                  outline-offset: 2px;
-                  background-image:  linear-gradient(to right, var(--cream-500), var(--cream-100));
-                  color: var(--cream-700);
-                  font-size: 18px;
-                  margin-top: 20px;
-              }
-      
           }
+        }
       }
-  
+
+      .contact-form {
+        width: 100%;
+        margin-top: 20px;
+
+        .send-message {
+          display: block;
+
+          align-self: center;
+
+          .name-email-input {
+            display: flex;
+            justify-content: space-between;
+
+            input {
+              background-color: var(--dark-grey-500);
+              border: none;
+              height: 58px;
+              width: 45%;
+              padding: 20px 30px;
+              color: var(--white);
+              font-size: 16px;
+            }
+          }
+
+          input {
+            background-color: var(--dark-grey-500);
+            border: none;
+            height: 58px;
+            width: 100%;
+            padding: 20px 30px;
+            color: var(--white);
+            font-size: 16px;
+            margin-top: 20px;
+          }
+
+          textarea {
+            background-color: var(--dark-grey-500);
+            border: none;
+            height: 145px;
+            width: 100%;
+            padding: 20px 30px;
+            color: var(--white);
+            font-size: 16px;
+            margin-top: 20px;
+          }
+
+          button {
+            width: 230px;
+            height: 51px;
+            border-radius: 25px;
+            outline: 1px solid var(--cream-500);
+            outline-offset: 2px;
+            background-image: linear-gradient(
+              to right,
+              var(--cream-500),
+              var(--cream-100)
+            );
+            color: var(--cream-700);
+            font-size: 18px;
+            margin-top: 20px;
+          }
+        }
+      }
     }
   }
 }
