--- a/src/app/features/feature-portfolio/components/service-section/service-section.component.html
+++ b/src/app/features/feature-portfolio/components/service-section/service-section.component.html
@@ -3,44 +3,14 @@
   <h2>My Expertise Area</h2>
 
   <div class="expertise-area">
-    <div class="expertise-area-item">
+    <div class="expertise-area-item" *ngFor="let expertise of expertises">
       <div class="item-count">
-        <h1>01</h1>
+        <h1>{{ expertise.id }}</h1>
         <mat-icon svgIcon="programmer-laptop"></mat-icon>
       </div>
-      <h1>Frontend Development</h1>
+      <h1>{{ expertise.title }}</h1>
       <div class="line"></div>
-      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-    </div>
-    <div class="expertise-area-item">
-      <div class="item-count">
-        <h1>02</h1>
-        <mat-icon svgIcon="programmer-laptop"></mat-icon>
-      </div>
-      <h1>Backend Development</h1>
-      <div class="line"></div>
-      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-    </div>
-  </div>
-
-  <div class="expertise-area">
-    <div class="expertise-area-item">
-      <div class="item-count">
-        <h1>03</h1>
-        <mat-icon svgIcon="programmer-laptop"></mat-icon>
-      </div>
-      <h1>Mobile Development</h1>
-      <div class="line"></div>
-      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-    </div>
-    <div class="expertise-area-item">
-      <div class="item-count">
-        <h1>04</h1>
-        <mat-icon svgIcon="programmer-laptop"></mat-icon>
-      </div>
-      <h1>CI/CD</h1>
-      <div class="line"></div>
-      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+      <p>{{ expertise.description }}</p>
     </div>
   </div>
 </div>
