--- a/src/app/features/feature-portfolio/components/testimonial-section/testimonial-section.component.scss
+++ b/src/app/features/feature-portfolio/components/testimonial-section/testimonial-section.component.scss
@@ -30,10 +30,16 @@
             width: 480px;
             min-width: 200px;
             height: 350px;
-            background-color: white;
+            background-color: var(--white);
             margin-left: 100px;
             position: relative;
             bottom: 15%;
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
         }
 
         .sparks{
@@ -115,34 +121,42 @@
         justify-content: space-between;
         
 
-        button{
+        .slide-button{
             font-size: 18px;
             color: var(--dark-grey-100);
             background-color: transparent;
             border: none;
-            width: 160px;
             height: 40px;
+            align-content: center;
 
             span{
-                margin-left: 30px;
-                margin-right: 10px;
-            }
-
-            img{
-                width: 16px;
-                height: 16px;
-                margin-right: -17px;
-                margin-bottom: -3px;
-            }
-
-            img + img{
                 margin-left: 10px;
-            }
+                margin-top: -15px;
+              }
+  
+              mat-icon{
+                  margin-left: -10px;
+                  width: 18px;
+                  height: 18px;
+                  margin-top: 10px;
+              }
+
+              &:hover{       
+                cursor: pointer;    
+              }
         }
 
-        button:hover{
-            border-radius: 25px;
-            background-color: var(--dark-grey-400);
+        .second-slide-button{
+            align-content: center;
+
+            span{
+                margin-right: 20px;
+              }
+
+              mat-icon{
+        
+                margin-bottom: -10px;
+            }
         }
 
         .progress-bar-container{
@@ -150,28 +164,15 @@
             justify-content: space-between;
             align-items: center;
             color: var(--white);
-            width: 25%; 
+            width: 30%; 
 
-            .progress-bar{
-                background-color: var(--white); 
-                height: 5px;
-                width: 80%;
-    
-                .progress{
-                    background-color: var(--cream-500); 
-                    padding: 1%; 
-                    text-align: right; 
-                    font-size: 20px; 
-                    height: 5px;
-                }
-    
-                .html { 
-                    width: 25%; 
-                } 
+            mat-progress-bar{
+                margin: 0px 10px;
             }
         }
     }
 }
+
 
 @media screen and (max-width: 767px) {
     .testimonial{
@@ -261,17 +262,11 @@
                 border: none;
                 width: auto;
                 height: 40px;
-    
-                img{
-                    width: 16px;
-                    height: 16px;
-                    margin-right: -17px;
-                    margin-bottom: -3px;
+
+                span{
+                    display: none;
                 }
     
-                img + img{
-                    margin-left: 10px;
-                }
             }
     
             button:hover{
